--- a/src/app/routes/integration/integration-data-item-family/integration-data-item-family.component.html
+++ b/src/app/routes/integration/integration-data-item-family/integration-data-item-family.component.html
@@ -40,11 +40,14 @@
         <nz-form-control [nzSpan]="18">
           
           <nz-select  nzMode="multiple" formControlName="statusList" name="statusList">
-            <nz-option
-              *ngFor="let status of integrationStatusListKeys"
-              [nzValue]="status"
-              nzLabel="{{ 'INTEGRATION-STATUS-' + status | i18n}}"
-            ></nz-option>
+            @for (status of integrationStatusListKeys; track status) {
+            
+              <nz-option 
+                [nzValue]="status"
+                nzLabel="{{ 'INTEGRATION-STATUS-' + status | i18n}}"
+              ></nz-option>
+            
+            }  
           </nz-select>
         </nz-form-control>
       </nz-form-item>
@@ -85,50 +88,58 @@
     <thead >
       <tr>
         
-        <th
-        *ngFor="let column of listOfColumns"
-        [nzShowSort]="column.showSort"
-        [nzSortOrder]="column.sortOrder"
-        [nzSortFn]="column.sortFn"
-        [nzSortDirections]="column.sortDirections"
-        [nzFilterMultiple]="column.filterMultiple"
-        [nzFilters]="column.listOfFilter"
-        [nzFilterFn]="column.filterFn"        
-        [nzShowFilter]="column.showFilter"
-      >
-        {{ column.name | i18n }}
-      </th> 
+        @for (column of listOfColumns; track column) {
+            
+            <th 
+              [nzShowSort]="column.showSort"
+              [nzSortOrder]="column.sortOrder"
+              [nzSortFn]="column.sortFn"
+              [nzSortDirections]="column.sortDirections"
+              [nzFilterMultiple]="column.filterMultiple"
+              [nzFilters]="column.listOfFilter"
+              [nzFilterFn]="column.filterFn"        
+              [nzShowFilter]="column.showFilter"
+            >
+              {{ column.name | i18n }}
+            </th> 
+            
+        }  
       <th nzEllipsis>{{ 'integration.errorMessage' | i18n }}</th>
       <th nzRight>{{ 'action' | i18n }}</th>
        
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let data of rowSelectionTable.data">
-        <td>{{ data.id }}</td>
-
-        <td>{{ data.name }}</td>
-        <td>{{ data.description }}</td>
-        <td>{{ data.warehouseId }}</td>
-        <td>{{ data.warehouseName }}</td>
-
-        <td>{{ 'INTEGRATION-STATUS-' + data.status | i18n}}</td>
-        
-        <td>
-          {{data.createdTime | date:'short'}} 
-        </td>
-        <td>
-          {{data.lastModifiedTime | date:'short'}} 
-        </td>
-        <td nzEllipsis>
-          <a>
-            <span nz-tooltip nzTooltipTitle="{{ data.errorMessage }}">{{ data.errorMessage }}</span>
-          </a>
-        </td>
-        <td nzRight>
-          <button nz-button (click)="resendIntegration(data.id!)">{{ 'resend' | i18n }}</button>
-        </td>
-      </tr>
+  
+      @for (data of rowSelectionTable.data; track data) {
+      
+        <tr >
+          <td>{{ data.id }}</td>
+  
+          <td>{{ data.name }}</td>
+          <td>{{ data.description }}</td>
+          <td>{{ data.warehouseId }}</td>
+          <td>{{ data.warehouseName }}</td>
+  
+          <td>{{ 'INTEGRATION-STATUS-' + data.status | i18n}}</td>
+          
+          <td>
+            {{data.createdTime | date:'short'}} 
+          </td>
+          <td>
+            {{data.lastModifiedTime | date:'short'}} 
+          </td>
+          <td nzEllipsis>
+            <a>
+              <span nz-tooltip nzTooltipTitle="{{ data.errorMessage }}">{{ data.errorMessage }}</span>
+            </a>
+          </td>
+          <td nzRight>
+            <button nz-button (click)="resendIntegration(data.id!)">{{ 'resend' | i18n }}</button>
+          </td>
+        </tr>
+      
+      }  
 
     </tbody>
   </nz-table>
