--- a/src/app/routes/integration/integration-data-order-confirm/integration-data-order-confirm.component.html
+++ b/src/app/routes/integration/integration-data-order-confirm/integration-data-order-confirm.component.html
@@ -38,11 +38,15 @@
         <nz-form-control [nzSpan]="18">
           
           <nz-select  nzMode="multiple" formControlName="statusList" name="statusList">
-            <nz-option
-              *ngFor="let status of integrationStatusListKeys"
-              [nzValue]="status"
-              nzLabel="{{ 'INTEGRATION-STATUS-' + status | i18n}}"
-            ></nz-option>
+            @for (status of integrationStatusListKeys; track status) {
+            
+              <nz-option 
+                [nzValue]="status"
+                nzLabel="{{ 'INTEGRATION-STATUS-' + status | i18n}}"
+              ></nz-option>
+            
+            }  
+            
           </nz-select>
         </nz-form-control>
       </nz-form-item>
@@ -84,8 +88,9 @@
     <thead  >
       <tr>
         <th nzWidth="40px"></th>
-        <th
-            *ngFor="let column of listOfColumns"
+        @for (column of listOfColumns; track column) {
+        
+          <th 
             [nzShowSort]="column.showSort"
             [nzSortOrder]="column.sortOrder"
             [nzSortFn]="column.sortFn"
@@ -97,6 +102,8 @@
           >
             {{ column.name | i18n }}
           </th> 
+        }  
+        
           <th nzEllipsis>{{ 'integration.errorMessage' | i18n }}</th>
           <th nzRight>{{ 'action' | i18n }}</th>
           
@@ -181,21 +188,25 @@
                     </th>
                   </thead>
     <tbody>
-      <tr *ngFor="let orderLine of data.orderLines">
-        <td>{{ orderLine.number }}</td>
-        <td>{{ orderLine.itemId }}</td>
-        <td>{{ orderLine.itemName }}</td>
-        <td>{{ orderLine.inventoryStatusId }}</td>
-        <td>{{ orderLine.inventoryStatusName }}</td>
-        <td>{{ orderLine.carrierId }}</td>
-        <td>{{ orderLine.carrierName }}</td>
-        <td>{{ orderLine.carrierServiceLevelId }}</td>
-        <td>{{ orderLine.carrierServiceLevelName }}</td>
-        <td>{{ orderLine.expectedQuantity }}</td>
-        <td>{{ orderLine.openQuantity }}</td>
-        <td>{{ orderLine.inprocessQuantity }}</td>
-        <td>{{ orderLine.shippedQuantity }}</td>
-      </tr>
+      @for (orderLine of data.orderLines; track orderLine) {
+      
+        <tr >
+          <td>{{ orderLine.number }}</td>
+          <td>{{ orderLine.itemId }}</td>
+          <td>{{ orderLine.itemName }}</td>
+          <td>{{ orderLine.inventoryStatusId }}</td>
+          <td>{{ orderLine.inventoryStatusName }}</td>
+          <td>{{ orderLine.carrierId }}</td>
+          <td>{{ orderLine.carrierName }}</td>
+          <td>{{ orderLine.carrierServiceLevelId }}</td>
+          <td>{{ orderLine.carrierServiceLevelName }}</td>
+          <td>{{ orderLine.expectedQuantity }}</td>
+          <td>{{ orderLine.openQuantity }}</td>
+          <td>{{ orderLine.inprocessQuantity }}</td>
+          <td>{{ orderLine.shippedQuantity }}</td>
+        </tr>
+      
+      }  
     </tbody>
   </nz-table>
   </nz-tab>
