--- a/src/app/routes/integration/integration-data-receipt-confirm/integration-data-receipt-confirm.component.html
+++ b/src/app/routes/integration/integration-data-receipt-confirm/integration-data-receipt-confirm.component.html
@@ -39,11 +39,14 @@
         <nz-form-control [nzSpan]="18">
           
           <nz-select  nzMode="multiple" formControlName="statusList" name="statusList">
-            <nz-option
-              *ngFor="let status of integrationStatusListKeys"
-              [nzValue]="status"
-              nzLabel="{{ 'INTEGRATION-STATUS-' + status | i18n}}"
-            ></nz-option>
+            @for (status of integrationStatusListKeys; track status) {
+            
+              <nz-option 
+                [nzValue]="status"
+                nzLabel="{{ 'INTEGRATION-STATUS-' + status | i18n}}"
+              ></nz-option>
+            
+            }  
           </nz-select>
         </nz-form-control>
       </nz-form-item>
@@ -85,8 +88,9 @@
     <thead >
       <tr>
         <th nzWidth="40px"></th>
-        <th
-            *ngFor="let column of listOfColumns"
+        @for (column of listOfColumns; track column) {
+        
+          <th 
             [nzShowSort]="column.showSort"
             [nzSortOrder]="column.sortOrder"
             [nzSortFn]="column.sortFn"
@@ -98,6 +102,8 @@
           >
             {{ column.name | i18n }}
           </th>  
+        
+        }  
           <th nzEllipsis>{{ 'integration.errorMessage' | i18n }}</th>
           <th nzRight>{{ 'action' | i18n }}</th>
           
@@ -168,15 +174,19 @@
                     </th>
                   </thead>
     <tbody>
-      <tr *ngFor="let receiptLine of data.receiptLines">
-        <td>{{ receiptLine.number }}</td>
-        <td>{{ receiptLine.itemId }}</td>
-        <td>{{ receiptLine.itemName }}</td>
-        <td>{{ receiptLine.expectedQuantity }}</td>
-        <td>{{ receiptLine.receivedQuantity }}</td>
-        <td>{{ receiptLine.overReceivingQuantity }}</td>
-        <td>{{ receiptLine.overReceivingPercent }}</td>
-      </tr>
+      @for (receiptLine of data.receiptLines; track receiptLine) {
+      
+        <tr >
+          <td>{{ receiptLine.number }}</td>
+          <td>{{ receiptLine.itemId }}</td>
+          <td>{{ receiptLine.itemName }}</td>
+          <td>{{ receiptLine.expectedQuantity }}</td>
+          <td>{{ receiptLine.receivedQuantity }}</td>
+          <td>{{ receiptLine.overReceivingQuantity }}</td>
+          <td>{{ receiptLine.overReceivingPercent }}</td>
+        </tr>
+      
+      }  
     </tbody>
   </nz-table>
   </nz-tab>
