--- a/src/app/routes/inventory/audit-count-confirm/audit-count-confirm.component.html
+++ b/src/app/routes/inventory/audit-count-confirm/audit-count-confirm.component.html
@@ -37,28 +37,32 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let data of inventoryTable.data; let i = index">
-        <td>{{ data.inventory.id }}</td>
-        <td>
-          {{ data.inventory.lpn }}
-        </td>
-        <td>
-          {{ data.inventory.item?.name }}
-        </td>
-        <td>
-          {{ data.inventory.item?.description }}
-        </td>
-        <td>
-          {{ data.inventory.itemPackageType?.name }}
-        </td>
-        <td>{{ data.location.name }}</td>
-        <td>{{ data.quantity }}</td>
-        <td>
-          {{ data.inventory.inventoryStatus?.description }}
-        </td>
-        <td>
-          {{ data.countQuantity}}</td>
-      </tr>
+      @for (data of inventoryTable.data; track data; let i = $index) {
+      
+        <tr >
+          <td>{{ data.inventory.id }}</td>
+          <td>
+            {{ data.inventory.lpn }}
+          </td>
+          <td>
+            {{ data.inventory.item?.name }}
+          </td>
+          <td>
+            {{ data.inventory.item?.description }}
+          </td>
+          <td>
+            {{ data.inventory.itemPackageType?.name }}
+          </td>
+          <td>{{ data.location.name }}</td>
+          <td>{{ data.quantity }}</td>
+          <td>
+            {{ data.inventory.inventoryStatus?.description }}
+          </td>
+          <td>
+            {{ data.countQuantity}}</td>
+        </tr>
+      
+      }  
     </tbody>
   </nz-table>
 </div>
