--- a/src/app/routes/integration/integration-data-customer/integration-data-customer.component.html
+++ b/src/app/routes/integration/integration-data-customer/integration-data-customer.component.html
@@ -41,11 +41,14 @@
         <nz-form-control [nzSpan]="18">
           
           <nz-select  nzMode="multiple" formControlName="statusList" name="statusList">
-            <nz-option
-              *ngFor="let status of integrationStatusListKeys"
-              [nzValue]="status"
-              nzLabel="{{ 'INTEGRATION-STATUS-' + status | i18n}}"
-            ></nz-option>
+              @for (status of integrationStatusListKeys; track status) {
+              
+                <nz-option 
+                  [nzValue]="status"
+                  nzLabel="{{ 'INTEGRATION-STATUS-' + status | i18n}}"
+                ></nz-option>
+              
+              }  
           </nz-select>
         </nz-form-control>
       </nz-form-item>
@@ -86,8 +89,9 @@
     <thead  >
       <tr>
         
-        <th
-            *ngFor="let column of listOfColumns"
+        @for (column of listOfColumns; track column) {
+            
+          <th 
             [nzShowSort]="column.showSort"
             [nzSortOrder]="column.sortOrder"
             [nzSortFn]="column.sortFn"
@@ -99,6 +103,8 @@
           >
             {{ column.name | i18n }}
           </th> 
+            
+        }  
           
           <th nzEllipsis>{{ 'integration.errorMessage' | i18n }}</th>
           <th nzRight>{{ 'action' | i18n }}</th>
@@ -106,7 +112,10 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let data of rowSelectionTable.data">
+      
+      @for (data of rowSelectionTable.data; track data) {
+            
+      <tr >
         <td>{{ data.id }}</td>
 
         <td>{{ data.name }}</td>
@@ -139,6 +148,8 @@
           <button nz-button (click)="resendIntegration(data.id!)">{{ 'resend' | i18n }}</button>
         </td>
       </tr>
+            
+      }  
 
     </tbody>
   </nz-table>
