--- a/src/app/routes/integration/integration-data-item-package-type/integration-data-item-package-type.component.html
+++ b/src/app/routes/integration/integration-data-item-package-type/integration-data-item-package-type.component.html
@@ -41,11 +41,14 @@
         <nz-form-control [nzSpan]="18">
           
           <nz-select  nzMode="multiple" formControlName="statusList" name="statusList">
-            <nz-option
-              *ngFor="let status of integrationStatusListKeys"
-              [nzValue]="status"
-              nzLabel="{{ 'INTEGRATION-STATUS-' + status | i18n}}"
-            ></nz-option>
+            @for (status of integrationStatusListKeys; track status) {
+            
+              <nz-option 
+                [nzValue]="status"
+                nzLabel="{{ 'INTEGRATION-STATUS-' + status | i18n}}"
+              ></nz-option>
+            
+            }  
           </nz-select>
         </nz-form-control>
       </nz-form-item>
@@ -87,19 +90,22 @@
       <tr>
         <th nzWidth="40px"></th>
         
-        <th
-            *ngFor="let column of listOfColumns"
-            [nzShowSort]="column.showSort"
-            [nzSortOrder]="column.sortOrder"
-            [nzSortFn]="column.sortFn"
-            [nzSortDirections]="column.sortDirections"
-            [nzFilterMultiple]="column.filterMultiple"
-            [nzFilters]="column.listOfFilter"
-            [nzFilterFn]="column.filterFn"        
-            [nzShowFilter]="column.showFilter"
-          >
-            {{ column.name | i18n }}
-          </th> 
+        @for (column of listOfColumns; track column) {
+            
+            <th 
+              [nzShowSort]="column.showSort"
+              [nzSortOrder]="column.sortOrder"
+              [nzSortFn]="column.sortFn"
+              [nzSortDirections]="column.sortDirections"
+              [nzFilterMultiple]="column.filterMultiple"
+              [nzFilters]="column.listOfFilter"
+              [nzFilterFn]="column.filterFn"        
+              [nzShowFilter]="column.showFilter"
+            >
+              {{ column.name | i18n }}
+            </th> 
+            
+        }  
           <th nzEllipsis>{{ 'integration.errorMessage' | i18n }}</th>
            
           <th nzRight>{{ 'action' | i18n }}</th>
@@ -190,29 +196,34 @@
                 </tr>
               </thead>
     <tbody>
-      <tr *ngFor="let data of innerTable.data">
-        <td>{{ data.id }}</td>
-
-        <td>{{ data.itemId }}</td>
-        <td>{{ data.itemName }}</td>
-
-
-        <td>{{ data.itemPackageTypeId }}</td>
-        <td>{{ data.itemPackageTypeName }}</td>
-
-        <td>{{ data.unitOfMeasureId }}</td>
-        <td>{{ data.unitOfMeasureName }}</td>
-
-        <td>{{ data.quantity }}</td>
-        <td>{{ data.weight }}</td>
-
-        <td>{{ data.length }}</td>
-        <td>{{ data.width }}</td>
-        <td>{{ data.height }}</td>
-
-        <td>{{ data.warehouseId }}</td>
-        <td>{{ data.warehouseName }}</td>
-      </tr>
+      @for (data of innerTable.data; track data) {
+      
+        <tr  >
+          <td>{{ data.id }}</td>
+  
+          <td>{{ data.itemId }}</td>
+          <td>{{ data.itemName }}</td>
+  
+  
+          <td>{{ data.itemPackageTypeId }}</td>
+          <td>{{ data.itemPackageTypeName }}</td>
+  
+          <td>{{ data.unitOfMeasureId }}</td>
+          <td>{{ data.unitOfMeasureName }}</td>
+  
+          <td>{{ data.quantity }}</td>
+          <td>{{ data.weight }}</td>
+  
+          <td>{{ data.length }}</td>
+          <td>{{ data.width }}</td>
+          <td>{{ data.height }}</td>
+  
+          <td>{{ data.warehouseId }}</td>
+          <td>{{ data.warehouseName }}</td>
+        </tr>
+      
+      }  
+      
     </tbody>
   </nz-table>
 
