--- a/src/app/routes/common/print-button/print-button.component.html
+++ b/src/app/routes/common/print-button/print-button.component.html
@@ -36,9 +36,9 @@
           </nz-form-label>
           <nz-form-control [nzSm]="14" [nzXs]="24">
             <nz-select nz-input formControlName="printer" style="width: 250px">
-              @for (availablePrint of availablePrinters; track availablePrint) {
-                <nz-option [nzLabel]="availablePrint.name"
-                  [nzValue]="availablePrint.id">
+              @for (availablePrinter of availablePrinters; track availablePrinter) {
+                <nz-option [nzLabel]="availablePrinter.name"
+                  [nzValue]="availablePrinter.id">
                 </nz-option>
               }        
               
